Edit header to align correctly on the center

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   display: flex;
   flex-direction: column;
+  padding: 9px;
   gap: 18px;
   align-items: center;
   background-color: #FDD935;
@@ -10,6 +11,7 @@ body {
 
 h1 {
   display: flex;
+  text-align: center;
   justify-content: center;
   margin-top: 0px;
   margin-bottom: 60px;
